--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,67 +1,31 @@
-<div>
 
-<div class="jumbotron">
-    <div class="container">
-      <h1>Geek Flix</h1>
-      <p>Find the best movies online</p>
-    </div>
-  </div>
-<div class="container">
-
-     <div class="row">
-        
-           <div class="col-md-3">
-            <a href="#" 
-            class="list-group-item clearfix" 
-            *ngFor="let movie of movies"
-            >
-            {{ movie.name }}  {{ movie.desc }} {{ movie.imagePath }} 
-
-
-        </a>
-        </div>
-             <!-- <div class="pull-left">
-                <h4 class="list-group-item-heading">{{ movies.name }}</h4>
-                <p class="list-group-item-text">{{ movies.description }}</p>
-                <img src="" 
-                alt=""> 
-            </div>            
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
-          </div>
-          <span class="pull-right">
-              <img src="{{ movies.imagePath }}" 
-              alt="{{ movies.name }}" 
-              class="img-responsive" 
-              style="max-height: 50px;">
-          </span> 
-          </div> -->
-          <div class="col-md-3">
-            <img src="..." class="img-responsive" alt="Responsive image">            
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
-          </div>
-          <div class="col-md-3">
-            <img src="..." class="img-responsive" alt="Responsive image">            
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
-          </div>
-          <div class="col-md-3">
-            <img src="..." class="img-responsive" alt="Responsive image">            
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
-          </div>
-          <div class="col-md-3">
-            <img src="..." class="img-responsive" alt="Responsive image">            
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
-          </div>
-         </div>
+<h1 class="title text-center h1-responsive">Geek Flix</h1>
+<div *ngIf="movies">
+  <div class="container">
+    <div class="row">
+      <!-- Loop Popular movies, limit result with slice -->
+      <div
+        class="col-4 col-md-4 col-lg-3 my-3 px-2 px-md-4"
+        *ngFor="let movie of movies">
+          <a>
+            
+           <img src="{{ movie.image }}" 
+           class="img-responsive" 
+           alt="Responsive image"
+           (click)="onSelect(movie)">            
+          </a>
+            <h3>{{  movie.name | uppercase}}</h3>
+            <p>{{  movie.desc}}<p>
 
 
-
-
-
-
+            <div *ngIf="selectedMovie">
+        <h2>{{selectedMovie.name | uppercase}} Details</h2>
+        <div><span>id: </span>{{selectedMovie.name}}</div>
+        <div>
+          <label for="movie-name">Movie name: </label>
+          <input id="movie-name" [(ngModel)]="selectedMovie.name" placeholder="name">
+        </div> 
+      </div>
+      
 
 
