router links added movie to movie detail

--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -14,3 +14,14 @@
     </div>
 </div>
 
+
+<div *ngIf="movie">
+    <h2>{{movie.name | uppercase}} Details</h2>
+    <div>{{movie.desc}}</div>
+    <div>
+      <label for="movie-name">Movie  </label>
+    </div> 
+  </div>
+
+ 
+  
