--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,26 +6,27 @@
       <!-- Loop Popular movies, limit result with slice -->
       <div
         class="col-4 col-md-4 col-lg-3 my-3 px-2 px-md-4"
-        *ngFor="let movie of movies">
-          <a>
-            
+        *ngFor="let movie of movies"
+        [class.selected]="movie === selectedMovie"
+        >
+        <div>
+          <a  routerLink="/movie-detail/:id{{ movie.name }}">
+
            <img src="{{ movie.image }}" 
            class="img-responsive" 
            alt="Responsive image"
-           (click)="onSelect(movie)">            
+           title="{{ movie.name }}"
+           alt="{{ movie.name }}"
+           />
           </a>
+            
             <h3>{{  movie.name | uppercase}}</h3>
             <p>{{  movie.desc}}<p>
-
-
-            <div *ngIf="selectedMovie">
-        <h2>{{selectedMovie.name | uppercase}} Details</h2>
-        <div><span>id: </span>{{selectedMovie.name}}</div>
-        <div>
-          <label for="movie-name">Movie name: </label>
-          <input id="movie-name" [(ngModel)]="selectedMovie.name" placeholder="name">
-        </div> 
+              
+            </div>
+    </div>
       </div>
-      
+      </div>
+
 
 
