--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,73 +1,5 @@
 <h1 class="title text-center h1-responsive">Geek Flix</h1>
-<div *ngIf="movies">
-  <div class="container">
-    
-
-    <div class="row">
-      <!-- Loop Popular movies, limit result with slice -->
-      <div *ngFor="let movie of movies | async">
-        <div> 
-          <a class="view overlay zoom" routerLink="/movie/{{ movie.id }}">
-            <img
-              class="poster-img hoverable"
-              src="https://image.tmdb.org/t/p/w400/{{ movie.poster_path }}"
-              title="{{ movie.title }}"
-              alt="{{ movie.title }}"
-            />
-            
-            <h3>{{ movie.title }}</h3>
-            <p>{{ movie.overview}}</p>
-          </a>
-        </div>
-
-        <ng-template #noPic>
-          <a class="view overlay zoom" routerLink="/movie/{{ movie.id }}">
-            <div
-              class="hoverable mb-3 img-placeholder row align-content-center justify-content-center flex-row"
-            >
-              <i class="far fa-image mb-3 col-12"></i>
-              <h5 class="missing-img-title col h5 heading">{{ movie.title }}</h5>
-            </div>
-          </a>
-        </ng-template>
-      </div>
-    </div>
-  </div>
+<!-- Loop Popular movies, limit result with slice -->
+<div *ngFor="let movie of movies">
+  <div>{{movie.title}}</div>
 </div>
-
-
-
-
-
-
-
-
-
-
-<!-- 
-      <h1 class="title text-center h1-responsive">Geek Flix</h1>
-
-
-
-  <div class="container" *ngIf= "movies">
-    <div class="row">
-      <div
-        class="col-4 col-md-4 col-lg-3 my-3 px-2 px-md-4"
-        *ngFor="let movie of movies"
-       >
-          <a  
-          class="view overlay" 
-          routerLink="movie-detail/:id">{{movie.title}}
-          <img
-              class="poster-img"
-              src="{{movie.poster_path}}"
-              title="{{ movie.title }}"
-              alt="{{ movie.title }}"
-              routerLink="/movie-detail/{{ movie.id }}"           
-               />
-            
-           <h3>{{ movie.title }}</h3>
-            <p>{{ movie.overview}}</p>
-          </a>
-        </div>
-        </div>  -->
